Removed klove styling

--- a/sass/base/_default.scss
+++ b/sass/base/_default.scss
@@ -1,13 +1,13 @@
 /*
-Theme Name: K-LOVE 2018
-Theme URI: http://underscores.me/
+Theme Name: Premier 2018
+Theme URI: http://premier-experience.com
 Author: Josh Bryant
 Author URI: http://southernfriedgeek.com
-Description: Site template for K Love 2018 Cruise
+Description: Site template for Premier 2018
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: LICENSE
-Text Domain: klove2018
+Text Domain: premier2018
 Tags:
 
 This theme, like WordPress, is licensed under the GPL.
