--- a/sass/components/_module.scss
+++ b/sass/components/_module.scss
@@ -1,9 +1,9 @@
-@import 'main-nav';
-@import 'hero';
-@import 'sub-nav';
-@import 'content';
-@import 'footer';
-@import 'duplex';
-@import 'buttons';
-@import 'search-row';
-
+@import 'main-nav',
+    'hero',
+    'sub-nav',
+    'content',
+    'footer',
+    'duplex',
+    'buttons',
+    'search-row',
+    'socials';
