--- a/sass/pages/_front.scss
+++ b/sass/pages/_front.scss
@@ -59,4 +59,79 @@
             }
         }
     }
+
+    &__info {
+        background: $color-premier-blue;
+        display: flex;
+        align-items: stretch;
+        font-size: 1.1875rem;
+
+        &-block{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            flex: 1;
+        }
+    }
+
+    &__logo {
+        display: flex;
+        margin: .8em auto;
+        max-height: 2.5em;
+    }
+
+    &__date {
+        color: $white;
+        font-weight: 700;
+        text-transform: uppercase;
+        display: block;
+        text-align: center;
+        font-size: 1em;
+        width: 100%;
+    }
+
+    &__link {
+        color: $color-dark-grey;
+        font-weight: 700;
+        text-transform: lowercase;
+        display: block;
+        text-align: center;
+        font-size: .75em;
+        width: 100%;        
+    }
+
+    &__book-now {
+        border-left: .125rem solid $white;
+        display: block;
+        height: 100%;
+        transform: skew(-15deg);
+        padding: .5em 0;
+        margin-right: -2em;
+        box-sizing: border-box;
+        text-decoration: none;
+        transition: .2s;
+        width: 100%;
+        margin-left: 15vw;
+        padding-right: 15vw;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+
+        &:hover {
+            cursor: pointer;
+            background-color: darken($color-premier-blue, 5%);
+        }
+
+        span {
+            transform: skew(15deg);
+            font-weight: 700;
+            color: $color-dark-grey;
+            display: block;
+            text-align: center;
+            line-height: 1;
+            padding-right: 2em;
+        }
+    }
 }
