responsive styles for events

--- a/sass/components/_main-nav.scss
+++ b/sass/components/_main-nav.scss
@@ -84,6 +84,7 @@
 .main-navigation {
     flex: 1;
     text-align: right;
+    overflow: hidden;
     ul {
         list-style-type: none;
         padding: 0;
