--- a/sass/pages/_module.scss
+++ b/sass/pages/_module.scss
@@ -1,4 +1,5 @@
-@import 'front';
-@import 'event';
-@import 'pricing';
-@import 'artists';
+@import 'front',
+    'artists',
+    'event',
+    'generic-page',
+    'pricing';
