--- a/sass/components/_main-nav.scss
+++ b/sass/components/_main-nav.scss
@@ -66,10 +66,12 @@
         bottom: .5rem;
     }
     &.expanded {
+        text-shadow: 0px 0px .5em rgba(14,156,161,1), 0px 0px 1em rgba(14,156,161,1);
         &:before, &:after {
             top: 50%;
             left: 50%;
             transition: all .5s;
+            z-index: -1;
         }
         &:before {
             transform: translate(-50%, -50%) rotate(45deg);
@@ -85,6 +87,8 @@
     flex: 1;
     text-align: right;
     overflow: hidden;
+    position: relative;
+    z-index: 10;
     ul {
         list-style-type: none;
         padding: 0;
