--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -17,6 +17,10 @@
     &:hover {
         filter: grayscale(0%);
     }
+    @include tablet-smaller {
+        padding: 1rem;
+        box-sizing: border-box;
+    }
     @include tablet-larger {
         flex: 1;
         height: 30vw;
