--- a/sass/pages/_contact.scss
+++ b/sass/pages/_contact.scss
@@ -1,6 +1,10 @@
 .contact-page {
     display: flex;
 
+    @include tablet-smaller {
+        display: block;
+    }
+
     h2 {
         font-size: 1.125rem;
         color: $color-premier-blue;
@@ -29,6 +33,11 @@
         &:nth-child(1) {
             flex: 3;
             margin-right: 4rem;
+
+            @include tablet-smaller {
+                margin-right: 0;
+                margin-bottom: 2rem;
+            }
         }
 
         &:nth-child(2) {
