--- a/sass/pages/_front.scss
+++ b/sass/pages/_front.scss
@@ -3,10 +3,13 @@
     
     &__video {
         position: relative;
-        border-bottom: 3.75rem solid $white;
         img {
             display: block;
             width: 100%;
+        }
+
+        @include tablet-larger {
+            border-bottom: 3.75rem solid $white;
         }
 
         &-button {
@@ -15,12 +18,17 @@
             width: 1em;
             position: absolute;
             left: 50%;
-            top: 50%;
-            transform: translateX(-50%) translateY(-50%);
             box-sizing: border-box;
             border: .25rem solid $white;
             border-radius: 50%;
-
+            @include tablet-smaller {
+                top: 2rem;
+                transform: translateX(-50%);
+            }
+            @include tablet-larger {
+                top: 50%;
+                transform: translateX(-50%) translateY(-50%);
+            }
             &:after {
                 content: '';
                 display: block;
@@ -45,12 +53,13 @@
         margin-bottom: 0;
         background-color: $white;
         margin-left: auto;
-        position: absolute;
-        bottom: -3.25rem;
         right: 0;
         padding: 1em 4.675em 1em 1em;
         box-sizing: border-box;
-
+        @include tablet-larger {
+            position: absolute;
+            bottom: -3.25rem;
+        }
         svg {
             position: absolute;
             top: 0;
@@ -209,6 +218,12 @@
         &__content {
             position: relative;
             z-index: 2;
+            a {
+                color: $white;
+                &:hover, &:focus, &:visited, &:active {
+                    color: $white;
+                }
+            }
         }
 
         &__header {
